# SmartRoute

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  build_backend.bat  build_frontend.bat  start.bat
.VSCodeCounter/2024-11-27_23-45-00/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: index.html
app/assets/: AboutView-3dhUqkse.js  AdminView-63f7Pmpu.js  CityView-tDGItlGt.js  RouteView-0lwnIhcm.css  RouteView-BsnZP35u.js  UserView-Co-0pBLU.js  el-input-iWiqhA9a.css  el-table-column-kI6MEHTB.css  index-EnGu6XRe.js  index-oNe3VMgi.css
app/config/: config.yaml
app/data/: routes.json
config/: config.yaml
data/: cities.json  data.json  routes.json
docs/DSdoc/: 3123004449林奕宏.doc
frontend/: .env.development  .env.production  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/axios/: axios.ts
frontend/src/components/: homePage.vue  userQuery.vue
frontend/src/router/: index.ts
frontend/src/stores/: cityStore.ts
src/: main.cpp
src/function/: main.h  main.hpp
src/graph/: graph.h  graph.hpp
src/main/: main.h  main.hpp
src/module/: constants.h  module.h  module.hpp
src/server/: server.h  server.hpp
src/system/: system.h  system.hpp
src/utils/: jsonTool.hpp  webTool.hpp  yamlTool.hpp
test/: bin.cpp
test/stores/: cityStore.ts  routesStore.ts
web/: .env  .env.production  components.d.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts.timestamp-1734582571668-0ef3d848da5d.mjs
web/src/: App.vue  main.ts
(+40 files in other folders)
